[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.8"
itertools = "0.10.5"
regex = "1.7.0"
scan_fmt = "0.2.6"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
